Form and Submit button work

--- a/thankyoupage.html
+++ b/thankyoupage.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <h1>Thank you page</h1>
-    <a href="file:///Users/joedev/Desktop/html-form/welcomepage.html">Click to Go Back</a>
+    <a href="./welcomepage.html">Click to Go Back</a>
 </head>
 <body>
     
